LMS > 교수관리 수정 기능 추가, gitignore 항목 추가 (/public/uploads)

--- a/.gitignore
+++ b/.gitignore
@@ -55,4 +55,5 @@ readme.rst
 !/storage/sessions/index.html
 /storage/uploads/*
 !/storage/uploads/index.html
+/public/uploads
 #application/config/database.php
