--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
 		"php": ">=7.1.11",
 		"eftec/bladeone": "^1.9",
 		"php-curl-class/php-curl-class": "^8.0",
-		"phpoffice/phpspreadsheet": "^1.2"
+		"phpoffice/phpspreadsheet": "^1.2",
+		"dragonmantank/cron-expression": "^2.2"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
