--- a/.gitignore
+++ b/.gitignore
@@ -61,24 +61,4 @@ readme.rst
 !/storage/cli/task/index.html
 /public/uploads
 #application/config/database.php
-_erd/.metadata/.lock
-_erd/.metadata/.log
-_erd/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/history.version
-_erd/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.index
-_erd/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/properties.version
-_erd/.metadata/.plugins/org.eclipse.core.resources/.root/.markers.snap
-_erd/.metadata/.plugins/org.eclipse.core.resources/.root/2.tree
-_erd/.metadata/.plugins/org.eclipse.core.resources/.safetable/org.eclipse.core.resources
-_erd/.metadata/.plugins/org.eclipse.core.resources/.snap
-_erd/.metadata/.plugins/org.eclipse.core.runtime/.settings/com.tomato.exerd.term.ui.prefs
-_erd/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.debug.ui.prefs
-_erd/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.equinox.p2.ui.sdk.prefs
-_erd/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.team.ui.prefs
-_erd/.metadata/.plugins/org.eclipse.core.runtime/.settings/org.eclipse.ui.editors.prefs
-_erd/.metadata/.plugins/org.eclipse.equinox.p2.ui.sdk/dialog_settings.xml
-_erd/.metadata/.plugins/org.eclipse.search/dialog_settings.xml
-_erd/.metadata/.plugins/org.eclipse.team.ui/dialog_settings.xml
-_erd/.metadata/.plugins/org.eclipse.ui.ide/dialog_settings.xml
-_erd/.metadata/.plugins/org.eclipse.ui.workbench/dialog_settings.xml
-_erd/.metadata/.plugins/org.eclipse.ui.workbench/workbench.xml
-_erd/.metadata/.plugins/org.eclipse.ui.workbench/workingsets.xml
+/_erd/.metadata/*
