JWT 설치 (lcobucci)

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
 		"eftec/bladeone": "^1.9",
 		"php-curl-class/php-curl-class": "^8.0",
 		"phpoffice/phpspreadsheet": "^1.2",
-		"dragonmantank/cron-expression": "^2.2"
+		"dragonmantank/cron-expression": "^2.2",
+		"lcobucci/jwt": "^3.2"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
