--- a/.gitignore
+++ b/.gitignore
@@ -53,7 +53,7 @@ readme.rst
 !/storage/logs/index.html
 /storage/sessions/*
 !/storage/sessions/index.html
-/storage/uploads/*
+/storage/uploads
 /storage/cli/*
 !/storage/cli/index.html
 !/storage/cli/task/index.html
