memcached git 에서 삭제

--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,7 @@ readme.rst
 /_bak/*
 #/_erd/*
 /storage/cache/*
+/storage/cache/memcached
 !/storage/cache/index.html
 !/storage/cache/views/index.html
 /storage/logs/*
