로그 뷰어 다운로드 기능 추가, 서버환경별 로그 설정 변경, 추가 로그 디렉토리 추가

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,8 @@ readme.rst
 !/storage/cache/views/index.html
 /storage/logs/*
 !/storage/logs/index.html
+!/storage/logs/cron/index.html
+!/storage/logs/pg/inisis/index.html
 /storage/sessions/*
 !/storage/sessions/index.html
 /storage/uploads
